--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <!-- 
-	Student Name: Maria Cruz
+	Student Name: Isabella Mills
 	File Name: contact.html
-	Today's Date: May 20, 2021
+	Today's Date: Feb 14th, 2024
  -->
 <html lang="en">
 <head>
 	<title>Wild Rescues: Contact</title>
 	<meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Emblema+One&family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
 <body>
 
 	<header>
-		<a href="index.html"><img src="images/baby-hawk.jpg" alt="rescued baby hawk"></a>
+		<a href="index.html" class="tab-desk"><img src="images/baby-hawk.jpg" alt="rescued baby hawk"></a>
+        <div class="mobile">
+            <h1>&#128062; Wild Rescues</h1>
+            <h3>Rescue. Rehabilitate. Release.</h3>
+        </div>
 	</header>
 	
 	<nav>
@@ -33,7 +39,7 @@
         <div id="contact">
             
             <h2>You can reach us at:</h2>
-            <p>Office: (814) 555-8989</p>
+            <p><a href="tel:8145558989" class="tel-link round">(814) 555-8989</a></p>
             <p>Email: <a href="mailto:contact@wildrescues.net" class="link">contact@wildrescues.net</a></p>
             <p>Address: <a href="https://goo.gl/maps/BTJzjc2tALd4RDWA8" target="_blank" class="link">8989 Rescue Drive, Ocala, FL 34471</a></p>
             
