--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <!-- 
-	Student Name: Maria Cruz
+	Student Name: Isabella Mills
 	File Name: index.html
-	Today's Date: May 7, 2021
+	Today's Date: Feb 14th, 2024
  -->
 <html lang="en">
 <head>
 	<title>Wild Rescues: Home</title>
 	<meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Emblema+One&family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
 <body>
 
 	<header>
-		<a href="index.html"><img src="images/baby-hawk.jpg" alt="rescued baby hawk"></a>
+		<a href="index.html" class="tab-desk"><img src="images/baby-hawk.jpg" alt="rescued baby hawk"></a>
+        <div class="mobile">
+            <h1>&#128062; Wild Rescues</h1>
+            <h3>Rescue. Rehabilitate. Release.</h3>
+        </div>
 	</header>
 	
 	<nav>
@@ -43,7 +49,7 @@
         <div id="latest">
             
             <h2>Our Latest Rescue: Baby Raccoons</h2>
-            <img src="images/baby-raccoons.jpg" alt="hands holding three baby raccoons">
+            <img src="images/baby-raccoons.jpg" alt="hands holding three baby raccoons" class="round">
             <p>Meet our latest rescues, Fizz, Bandit, and Mohawk. These three little guys were found abandoned near a home.</p>
         
         </div>
